tests/invalid/invalid-annotation-key.orgs
@priority "high"
process InvalidAnnotationKey

  when lead.created
